# lost_cities

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  setup.cfg
.github/workflows/: lint.yaml  pre-commit.yaml  test.yaml
src/lost_cities/: __init__.py  card.py  game.py  player.py
src/lost_cities/gui/: gui.py  settings.py  utils.py
tests/: __init__.py  conftest.py
tests/units/: test_card.py  test_game.py  test_gui.py  test_player.py  test_settings.py
