[metadata]
name = lost_cities
version = attr: lost_cities.VERSION
author = Mathis Nicoli
author_email = mathis.nicoli@gmail.com
description = Personal implementation of the Lost Cities card game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MathisNcl/lost_cities
license = MIT

platforms = any

classifiers = 
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    numpy
    pygame
    pillow
    pydantic_settings
    

include_package_data = True
packag_dir = 
    =src
python_requires = >=3.9

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    play-lost = lost_cities.game:main
    play-lost-gui = lost_cities.gui.gui:main

[options.extras_require]
all =
    %(testing)s
    %(dev)s

testing = 
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    mypy
    pre-commit

[bdist_wheel]
universal = 1

[flake8]
max-line-length=120
ignore=E203, W503

[mypy]
python_version = 3.11
ignore_missing_imports = True
disallow_untyped_defs = True
show_error_codes = True

[mypy-tests.*]
disallow_untyped_defs = False
disable_error_code = annotation-unchecked, index, union-attr

[isort]
src_paths = 
    src
    tests
profile = black
line_length = 120